--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <h3>London, United Kingdom</h3>
             <img src="https://www.history.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTYyNDg1MjE3MTI1Mjc5Mzk4/topic-london-gettyimages-760251843-promo.jpg" style="height: 300px"  alt="">
             <br>
-            <a href="url">London is a city known for its history.... Click to read more</a>
+            <p>London is a city known for its history....</p>
+            <a href="url">Click to read more</a>
 
         </div>
     
@@ -38,14 +39,16 @@
             <h3>Hong Kong</h3>
             <img src="https://thumbs.dreamstime.com/b/hong-kong-skyline-night-as-seen-victoria-peak-hong-kong-skyline-night-as-seen-victoria-peak-illuminated-135500135.jpg" style="height:266px"  alt="">
             <br>
-            <a href="url">Hong Kong is a popular city in Asia, with the most skyscrapers of any city in the world.... Click to read more</a>
+            <p>Hong Kong is a popular city in Asia, with the most skyscrapers of any city in the world....</p>
+            <a href="url">Click to read more</a>
 
         </div>
         <div class="city">
             <h3>Singapore, Singapore</h3>
             <img src="https://www.iflr.com/Media/images/iflr/natasha-t/Singapore.jpeg" style="height: 240px"  alt="">
             <br>
-            <a href="url">Singapore is a modern city-state featuring iconic structures.... Click to read more</a>
+            <p>Singapore is a modern city-state featuring iconic structures.... </p>
+            <a href="url">Click to read more</a>
             
         </div>
 
